# MSxy-Converter

./: .gitignore  BUILD.md  LICENSE  MSxy_converter.spec  MSxy_converter_app.py  README.md  build_mac.sh  build_windows.bat  pyproject.toml  requirements.txt  sacn_color_converter-1.0.0-py3-none-any.whl  sacn_color_converter.py
MSxy_converter/: __init__.py  __main__.py  cct.py  colour.py  converter.py  display.py  gdtf_loader.py  gui.py  launcher.py  network.py  presets.py  wizard.py
release/: MSxy_converter-1.0.0-py3-none-any.whl
