[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MSxy-converter"
version = "1.0.0"
description = "sACN Intensity/XY to multi-chip LED colour space converter for live lighting"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "sacn>=1.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
]
keywords = ["sacn", "e131", "dmx", "led", "lighting", "cie", "colour"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
]

[project.scripts]
MSxy-converter = "MSxy_converter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["MSxy_converter*"]
